[package]
name = "modtest"
version = "0.1.0"
authors = ["Drew Vogel <dvogel@github>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "modtestlib"
path = "src/lib.rs"

[[bin]]
name = "modtest"
path = "src/main.rs"

[dependencies]
